<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv_user_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_greetings"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_greetings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_greetings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_greetings_desc"
                app:layout_constraintBottom_toTopOf="@+id/iv_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_constraintVertical_chainStyle="packed" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_user_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/iv_user_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_header"
            app:layout_constraintTop_toTopOf="@+id/cl_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        app:layout_constraintTop_toBottomOf="@id/cl_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- ImageView di dalam CardView -->
            <ImageView
                android:id="@+id/iv_banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_background_food"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cl_banner" />

            <!-- TextView 1 di atas ImageView -->
            <TextView
                android:id="@+id/tv_diskon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_diskon"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/iv_banner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/iv_banner"
                app:layout_constraintTop_toTopOf="@id/iv_banner"
                android:textAlignment="center"/>

            <!-- TextView 2 di atas ImageView -->
            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_diskon_desc"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/iv_banner"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/iv_banner"
                app:layout_constraintTop_toBottomOf="@id/tv_diskon" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_banner"

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_categories_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cv_banner">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/clf_top_categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="ll_menu1,ll_menu2,ll_menu3,ll_menu4"
            app:flow_horizontalGap="16dp"
            app:flow_horizontalStyle="spread_inside"
            app:flow_maxElementsWrap="4"
            app:flow_verticalGap="16dp"
            app:flow_wrapMode="aligned" />

        <LinearLayout
            android:id="@+id/ll_menu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_sarapan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/tv_sarapan"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_fast_food" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/tv_fast_food"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_cupcake" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/tv_cake"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_menu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_beverage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/tv_beverage"
                android:textAlignment="center" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_list_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_categories_menu">

        <TextView
            android:id="@+id/tv_title_listmenu"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_menu_list"
            android:textColor="@color/app_color_on_secondary_container"
            android:textSize="24dp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_menu_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_list_menu"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <!-- ImageView 1 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_listmenu_marugame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="50dp">

            <ImageView
                android:id="@+id/iv_marugame"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_marugame_udon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_marugame_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_marugame_udon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_marugame" />

            <TextView
                android:id="@+id/tv_marugame_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_marugame_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_marugame_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- ImageView 2 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="50dp"
            app:layout_constraintStart_toEndOf="@id/cl_listmenu_marugame">

            <ImageView
                android:id="@+id/iv_ayam"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/iv_ayam_geprek"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndtOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ayam_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_ayam_geprek"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_ayam" />

            <TextView
                android:id="@+id/tv_ayam_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_ayam_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ayam_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>